Refactor and modernize solution